--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -14,6 +14,9 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+h1,h2,h3,h4,h5,h6 {
+  font-weight: normal;
+}
 ul, ol, li {
   list-style: none;
 }
